--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "mailersend/laravel-driver": "^2.7",
         "spatie/laravel-medialibrary": "^11.10"
     },
     "require-dev": {
