--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "mailersend/laravel-driver": "^2.7",
-        "spatie/laravel-medialibrary": "^11.10"
+        "spatie/laravel-medialibrary": "^11.10",
+        "spatie/laravel-translatable": "^6.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
