--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
+        "terser": "^5.39.0",
         "vite": "^5.0"
     }
 }
